Cycles bake - high to lowpoly artifacts #45343

Closed
opened 2015-07-06 13:09:21 +02:00 by Vilem Duha · 9 comments
Member

System Information
win 8
nvidia gf 880m

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: probably never

Short description of error
When baking high- to low-poly, where the highpoly has a shader with displacement texture(noise texture), there are artifacts as in the uploaded picture.
this happens with combined and normal baking mode, but probably also in other modes as well. It happened to me with many meshes, this is just one small example.

artifacts.jpg
THIS IS NOT A DUPLICATE OF #42015
although it looks similar, and that is the reason why I am reporting so late , because I thought it's the same case- this one is not caused by modifiers. I only noticed that because I noticed similar things also happen on meshes without modifiers.

Exact steps for others to reproduce the error

open the file, hit bake. Then change baking mode to COMBINED, hit bake again - similar artifacts happen.
bakebug_normals1.blend

What is this connected to is that there is a texture connected to the displacement channel of the shader.
there is another version in the file - where the shader seemingly looks the same, but normalmap node is used and plugged into shaders - however, this doesn't get baked, so the result is also flawed. (this is actually just another bug, but probably could be "unfinished feature", so I am not reporting this now)

**System Information** win 8 nvidia gf 880m **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: probably never **Short description of error** When baking high- to low-poly, where the highpoly has a shader with displacement texture(noise texture), there are artifacts as in the uploaded picture. this happens with combined and normal baking mode, but probably also in other modes as well. It happened to me with many meshes, this is just one small example. ![artifacts.jpg](https://archive.blender.org/developer/F203518/artifacts.jpg) THIS IS NOT A DUPLICATE OF #42015 although it looks similar, and that is the reason why I am reporting so late , because I thought it's the same case- this one is not caused by modifiers. I only noticed that because I noticed similar things also happen on meshes without modifiers. **Exact steps for others to reproduce the error** open the file, hit bake. Then change baking mode to COMBINED, hit bake again - similar artifacts happen. [bakebug_normals1.blend](https://archive.blender.org/developer/F203515/bakebug_normals1.blend) What is this connected to is that there is a texture connected to the displacement channel of the shader. there is another version in the file - where the shader seemingly looks the same, but normalmap node is used and plugged into shaders - however, this doesn't get baked, so the result is also flawed. (this is actually just another bug, but probably could be "unfinished feature", so I am not reporting this now)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @VilemDuha

Added subscriber: @VilemDuha

Added subscribers: @dfelinto, @Sergey

Added subscribers: @dfelinto, @Sergey

@dfelinto, is it something known to you?

@dfelinto, is it something known to you?

Added subscriber: @brecht

Added subscriber: @brecht
Brecht Van Lommel self-assigned this 2016-02-18 01:48:13 +01:00

The bug here is that the assumption in 8943dc60 is not correct, the differentials do in fact need to be modified because they are relative to the triangle shape and vertex order.

I think the solution here is basically to transfer the ray differentials like we do in Cycles in kernel_differential.h and in shade_input_set_uv in Blender internal.

The bug here is that the assumption in 8943dc60 is not correct, the differentials do in fact need to be modified because they are relative to the triangle shape and vertex order. I think the solution here is basically to transfer the ray differentials like we do in Cycles in `kernel_differential.h` and in `shade_input_set_uv` in Blender internal.

This issue was referenced by 0136046335

This issue was referenced by 01360463352736eebb5f42ad7ae7d61530615b84

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Should be fixed now. Note that to get best results some of the models in this files must be unwrapped again after the fix in 1a676d4e0e. There are a couple triangles that are really stretched so the normal map can't be smooth there even with proper differentials.

Should be fixed now. Note that to get best results some of the models in this files must be unwrapped again after the fix in 1a676d4e0e. There are a couple triangles that are really stretched so the normal map can't be smooth there even with proper differentials.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45343
No description provided.