Fix T45343: incorrect Cycles baking of bump maps from selected to active.

The differentials were incorrect, now they are properly transferred from the
low to the high poly mesh.